force-app/main/default/objects/POE_DealerStore__c/POE_DealerStore__c.object-meta.xml
<CustomObject>
    <label>DealerStore</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DealerStore Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DealerStores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>