force-app/main/default/objects/POE_DealerStore__c/fields/Inactive_Store__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Store</label>
    <type>Checkbox</type>
</CustomField>