force-app/main/default/objects/POE_DealerStore__c/fields/POE_Dealer__c.field-meta.xml
<CustomField>
    <fullName>POE_Dealer__c</fullName>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Stores</relationshipLabel>
    <relationshipName>DealerStores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>