force-app/main/default/objects/POE_DealerStore__c/fields/POE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_End_Date__c</fullName>
    <description>The date when the dealer&apos;s association with the retail store ended.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>