force-app/main/default/objects/POE_DealerStore__c/fields/POE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_Start_Date__c</fullName>
    <description>The date when the dealer started association with the retail store. (PER-3205)</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>