force-app/main/default/objects/POE_DealerStore__c/fields/POE_Status__c.field-meta.xml
<CustomField>
    <fullName>POE_Status__c</fullName>
    <description>Formula to check if the value should be Active, Inactive or Pending Activation based on the start and end dates</description>
    <formula>IF((POE_Start_Date__c &lt;= TODAY()) &amp;&amp; (ISBLANK(POE_End_Date__c) || (POE_End_Date__c &gt; TODAY())),
    &apos;Active&apos;,
    IF((POE_End_Date__c  &lt;  TODAY() ||  Inactive_Store__c = True),
        &apos;Inactive&apos;,
        IF(ISBLANK(POE_Start_Date__c) &amp;&amp; ISBLANK(POE_End_Date__c),
        &apos;Pending Activation&apos;,
        IF(POE_Start_Date__c  &gt;  TODAY(),
             &apos;Pending Activation&apos;,
             &apos;Inactive&apos;
        ))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>