force-app/main/default/objects/POE_DealerStore__c/fields/POE_Store__c.field-meta.xml
<CustomField>
    <fullName>POE_Store__c</fullName>
    <label>Store</label>
    <referenceTo>POE_Retail_Store__c</referenceTo>
    <relationshipLabel>DealerStores</relationshipLabel>
    <relationshipName>DealerStores</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>