force-app/main/default/objects/POE_DealerStore__c/validationRules/Cant_Change_Record_If_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_Record_If_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISCHANGED(POE_Status__c)),
 POE_Status__c = &apos;Inactive&apos;,
 NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Cannot update fields of an inactive DealerStore.</errorMessage>
</ValidationRule>