force-app/main/default/objects/POE_DealerStore__c/validationRules/End_Date_Must_Be_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>POE_End_Date__c &lt;= POE_Start_Date__c</errorConditionFormula>
    <errorDisplayField>POE_End_Date__c</errorDisplayField>
    <errorMessage>The End Date cannot be before the Start Date.</errorMessage>
</ValidationRule>