force-app/main/default/objects/POE_DealerStore__c/validationRules/EndDate_Higher_Than_Store.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Higher_Than_Store</fullName>
    <active>true</active>
    <errorConditionFormula>POE_End_Date__c &gt;  POE_Store__r.POE_End_Date__c</errorConditionFormula>
    <errorDisplayField>POE_End_Date__c</errorDisplayField>
    <errorMessage>Record End Date can&apos;t be higher than Store End Date</errorMessage>
</ValidationRule>