force-app/main/default/objects/POE_DealerStore__c/validationRules/Inactive_Retail_Store.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Retail_Store</fullName>
    <active>true</active>
    <description>Checks Retail Store Status</description>
    <errorConditionFormula>AND(POE_Store__r.Status__c = &apos;Inactive&apos;, ISNEW() = True)</errorConditionFormula>
    <errorDisplayField>POE_Store__c</errorDisplayField>
    <errorMessage>Can&apos;t create DealerStore record if the Store Status is Inactive</errorMessage>
</ValidationRule>